--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,14 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.4'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10'
         // 添加emas-services插件
 //        classpath 'com.aliyun.ams:emas-services:1.0.2'
 
         /*加这个能减少ARouter初始化时间*/
         classpath "com.alibaba:arouter-register:1.0.2"
+
+        def bytex_plugin_version = "0.3.0"
         /*byteX 基础*/
         classpath "com.bytedance.android.byteX:base-plugin:${bytex_plugin_version}"
         /*方法内联*/
