refactor 网络请求相关重构封装

--- a/base/build.gradle
+++ b/base/build.gradle
@@ -104,6 +104,7 @@ dependencies {
     api project(path: ':resource')
     api project(path: ':widget')
     api project(path: ':aliemas')
+    api project(path: ':viewmodel')
 
 
 }
