--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 /*当前文件用来配置所有子工程公用的配置*/
 
 println("我是根目录下的build.gradle")
+apply from: "gradle_script/checkVersions.gradle"
+apply from: "gradle_script/config.gradle"
 
 buildscript {
-
-    apply from: "gradle_script/config.gradle"
 
     repositories {
         google()
@@ -15,11 +15,13 @@ buildscript {
         maven {
             url "https://artifact.bytedance.com/repository/byteX/"
         }
-
+        gradlePluginPortal()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.4'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10'
+        /*依赖版本管理*/
+        classpath "com.github.ben-manes:gradle-versions-plugin:0.42.0"
         // 添加emas-services插件
 //        classpath 'com.aliyun.ams:emas-services:1.0.2'
 
