--- a/base/build.gradle
+++ b/base/build.gradle
@@ -65,15 +65,15 @@ dependencies {
 
 
     api AndroidOfficial.corektx
-    api AndroidOfficial.viewModel
+//    api AndroidOfficial.viewModel
     api AndroidOfficial.lifecycle
     api AndroidOfficial.liveData
     api AndroidOfficial.collection
     api AndroidOfficial.swiperefreshlayout
 
 
-    api Kotlinx.coroutinesCore
-    api Kotlinx.coroutineAndroid
+//    api Kotlinx.coroutinesCore
+//    api Kotlinx.coroutineAndroid
 
     api ThirdParty.utilcode
     api ThirdParty.mmkv
@@ -105,6 +105,7 @@ dependencies {
     api project(path: ':widget')
     api project(path: ':aliemas')
     api project(path: ':viewmodel')
+    api project(path: ':coroutine')
 
 
 }
