--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+#自定把依赖的support库转成AndroidX
 android.enableJetifier=true
 android.useAndroidX=true
 authToken=jp_45koepdran5gsmk15cdvtf3lhc
 kotlin.code.style=official
 android.injected.testOnly=false
+bytex.ASM_API=ASM9
