refactor 新增binding模块，消除BaseActivity泛型，使用委托方式代替

--- a/base/build.gradle
+++ b/base/build.gradle
@@ -110,6 +110,7 @@ dependencies {
     api project(path: ':aliemas')
     api project(path: ':viewmodel')
     api project(path: ':coroutine')
+    api project(path: ':binding')
 
 
 }
