refactor 一些编译方面的优化配置

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ plugins {
 }
 println "getRootDir():${getRootDir()}"
 
-apply from: file("${getRootDir()}/gradle_script/bytex.gradle")
+//apply from: file("${getRootDir()}/gradle_script/bytex.gradle")
 
 android {
 
