--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,15 @@ authToken=jp_45koepdran5gsmk15cdvtf3lhc
 kotlin.code.style=official
 android.injected.testOnly=false
 bytex.ASM_API=ASM9
+# configuration cache  可提升编译速度 但会对一些未适配的三方插件有影响
+org.gradle.unsafe.configuration-cache=true
+org.gradle.unsafe.configuration-cache-problems=warn
+#关闭R文件传递
+#关闭R文件传递可以通过编译避免的方式获得更快的编译速度
+#关闭R文件传递有助于确保每个模块的R类仅包含对其自身资源的引用，避免无意中引用其他模块资源，明确模块边界。
+#关闭R文件传递也可以减少很大一部分包体积与dex数量
+android.nonTransitiveRClass=true
+#开启跨模块增量编译
+kotlin.incremental.useClasspathSnapshot=true
+# 可选，启用构建报告
+kotlin.build.report.output=file
