--- a/aliemas/build.gradle
+++ b/aliemas/build.gradle
@@ -1,11 +1,10 @@
 import com.yzq.dependency_manager_plugin.AndroidConfig
+import com.yzq.dependency_manager_plugin.Kotlinx
 import com.yzq.dependency_manager_plugin.ThirdParty
 
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
-    id 'kotlin-parcelize'
     id 'com.yzq.dependency-manager'
 }
 
@@ -45,8 +44,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation(Kotlinx.kotlinStdlib)
     implementation ThirdParty.utilcode
+
+
     //崩溃分析
     api 'com.aliyun.ams:alicloud-android-ha-crashreporter:1.3.0'
     //移动日志
