feat 接入BRV,用来替换BaseRecyclerViewAdapterHelper，主页面以及任务页面改造完成

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -151,6 +151,8 @@ dependencies {
 
     implementation ThirdParty.xeonBsDiff
 
+    implementation(AndroidOfficial.recyclerview)
+
 
     implementation project(':gao-de-map')
 
