--- a/recycleview-adapter/build.gradle
+++ b/recycleview-adapter/build.gradle
@@ -45,7 +45,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-
+    api(AndroidOfficial.recyclerview)
     implementation AndroidOfficial.appcompat
     implementation AndroidOfficial.material
 
