Refactor 移除BaseRecyclerViewAdapterHelper，迁移到BRV

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,6 +140,7 @@ dependencies {
     implementation AndroidOfficial.viewpager2
     implementation(AndroidOfficial.coordinatorlayout)
     implementation(AndroidOfficial.splashscreen)
+    implementation(AndroidOfficial.recyclerview)
 
     kapt ARouter.arouterCompiler
     kapt AndroidOfficial.roomCompiler
