--- a/base/build.gradle
+++ b/base/build.gradle
@@ -108,6 +108,7 @@ dependencies {
     api project(path: ':aliemas')
     api project(path: ':coroutine')
     api project(path: ':binding')
+    api project(':statusbar')
 
 
 }
