--- a/aliemas/build.gradle
+++ b/aliemas/build.gradle
@@ -53,16 +53,16 @@ dependencies {
     //移动日志
     api('com.aliyun.ams:alicloud-android-tlog:1.1.4.1-open')
     //性能监控
-    api('com.aliyun.ams:alicloud-android-apm:1.0.10.0-open')
-    //移动分析  埋点
-    api 'com.aliyun.ams:alicloud-android-man:1.2.7'
+    api('com.aliyun.ams:alicloud-android-apm:1.1.0.0-open')
+    //移动分析  埋点 部分arm64-v8a设备上报错： https://help.aliyun.com/document_detail/65275.html
+//    api 'com.aliyun.ams:alicloud-android-man:1.2.7'
     //推送
-    api 'com.aliyun.ams:alicloud-android-push:3.7.3'
+    api 'com.aliyun.ams:alicloud-android-push:3.8.1'
     //公共依赖库
     api 'com.aliyun.ams:alicloud-android-utdid:2.6.0'
     api 'com.aliyun.ams:alicloud-android-utils:2.0.0'
     api 'com.aliyun.ams:alicloud-android-ut:5.4.5'
     api 'com.aliyun.ams:alicloud-android-beacon:1.0.7'
-    api('com.aliyun.ams:alicloud-android-ha-adapter:1.1.5.1-open')
+    api('com.aliyun.ams:alicloud-android-ha-adapter:1.1.5.3-open')
 
 }
