feat 增加网络相关配置

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ android {
 
         debug {
             signingConfig signingConfigs.release
+            debuggable true
             minifyEnabled false
             zipAlignEnabled false
             shrinkResources false
