--- a/coroutine/build.gradle
+++ b/coroutine/build.gradle
@@ -38,5 +38,7 @@ dependencies {
     api(Kotlinx.coroutinesCore)
     api(Kotlinx.coroutineAndroid)
 
-    api(AndroidOfficial.lifecycle)
+    implementation(AndroidOfficial.lifecycle)
+    implementation(AndroidOfficial.fragmentKtx)
+
 }
