refactor 权限申请代码重构

--- a/permission/build.gradle
+++ b/permission/build.gradle
@@ -47,6 +47,8 @@ dependencies {
 
     /*utils*/
     implementation ThirdParty.utilcode
+    /*xxPermission*/
+    api ThirdParty.xxPermission
 
 
 }
