--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@ android.nonTransitiveRClass=true
 #开启跨模块增量编译
 kotlin.incremental.useClasspathSnapshot=true
 # 可选，启用构建报告
-kotlin.build.report.output=file
+#kotlin.build.report.output=file
