refacotr 完善网络状态组件权限处理逻辑

--- a/network-status/build.gradle
+++ b/network-status/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     //Lifecycles only (without ViewModel or LiveData)
     implementation AndroidOfficial.lifecycle
     implementation project(path: ':application')
+    implementation project(path: ':permission')
 
 
 }
